# VesselVerse-Framework

./: LICENSE  README.md  requirements.txt
docs/3DSLICER/: 3DSlicer_installation.md  CONFIG.md
notebooks/: check_req_version.ipynb  extract_vessel_mask.ipynb  organize_data.ipynb
scripts/: WSL_install_slicer.sh  WSL_launch_slicer.sh  install_slicer.sh  launch_slicer.sh
scripts_py/: compute_staple.py  generate_metadata.py  staple_params.yaml  test_setup.py
src/core/: dataset.py  staple.py
src/model_config/: model_config.py
src/slicer_extension/VesselVerse/: CMakeLists.txt  VesselVerse.py  loading_dialog.py  opacity_slicer.py
src/tracking/: track_segmentations.py  verify_tracking.py
